# spiegel

./: README.md  components.json  index.html  package-lock.json  package.json  toolbar.html  tsconfig.json  vite.config.ts
src/: App.css  App.tsx  CategoryFilters.tsx  ClipCards.tsx  ClipDialog.tsx  GridVirtualizer.tsx  SettingsDialog.tsx  Toolbar.tsx  globals.css  main.tsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  database.rs  lib.rs  llm.rs  main.rs  settings.rs  shortcut.rs
src/components/: CategoryCombobox.tsx  ClipToolbar.tsx  ImageViewer.tsx  LazyImage.tsx  Spinner.tsx
src/components/ui/: alert-dialog.tsx  badge.tsx  button-text.tsx  button.tsx  checkbox.tsx  command.tsx  dialog.tsx  dropdown-menu.tsx  input.tsx  progress.tsx  scroll-area.tsx  select.tsx  separator.tsx  sheet.tsx  sonner.tsx  table.tsx  tabs.tsx  toast.tsx
src/lib/: utils.ts
