[package]
name = "Spiegel"
version = "0.1.0"
description = "AI-powered knowledge management tool that allows you to clip, categorize and save anything, anywhere."
authors = ["you"]
edition = "2021"

[lib]
name = "spiegel_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon", "image-ico", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
arboard = "3.6.0"
global-hotkey = "0.7.0"
rusqlite = { version = "0.37.0", features = ["bundled", "vtab"] }
enigo = "0.5.0"
base64 = "0.22.1"
async-openai = "0.29.0"
tokio = "1.46.1"
core-graphics = "0.25.0"
dotenvy = "0.15.7"
url = "2.5.4"
image = "0.25.6"
thiserror = "2.0.12"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2"

